--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Marc Wanjeru — Creative Developer & Designer</title>
 
-  <!-- Favicons (replace with your generated files) -->
+  <!-- Favicons -->
   <link rel="icon" href="nobklogo.png" type="image/png">
   <link rel="icon" href="favicon.ico" sizes="any">
-  <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="manifest" href="/manifest.json">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 
@@ -45,11 +43,11 @@
       content: "";
       position: fixed;
       inset: 0;
-      background: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0.75));
+      background: linear-gradient(to bottom, rgba(0,0,0,0.55), rgba(0,0,0,0.8));
       z-index: -2;
     }
 
-    /* Unified left navigation bar (logo + hamburger + icons) */
+    /* Unified left nav bar with logo */
     .unified-nav {
       position: fixed;
       left: 16px;
@@ -197,32 +195,126 @@
     .sidebar-links a:hover,
     .sidebar-links a.active { background: rgba(255,255,255,0.09); }
 
-    /* Hero */
-    .hero {
-      min-height: 100dvh;
+    /* Parallax sections */
+    .parallax-section {
+      position: relative;
+      overflow: hidden;
+      min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 0 6%;
-      text-align: center;
+      padding: 8rem 5% 6rem;
     }
 
-    .hero h1 {
-      font-size: clamp(3.4rem, 8.5vw, 5.8rem);
+    .parallax-bg-layer {
+      position: absolute;
+      inset: -20%;
+      background-size: cover;
+      background-position: center;
+      transform: translateZ(0);
+      will-change: transform;
+      z-index: -1;
+    }
+
+    .section-content {
+      position: relative;
+      z-index: 2;
+      max-width: 1100px;
+      width: 100%;
+    }
+
+    .section-content h2 {
+      font-size: clamp(3rem, 8vw, 5.5rem);
       font-weight: 700;
-      line-height: 1.05;
-      margin-bottom: 1.6rem;
+      margin-bottom: 2rem;
+      transform: translateZ(50px);
     }
 
-    .hero .subtitle {
-      font-size: clamp(1.2rem, 3.2vw, 1.45rem);
-      color: var(--text-light);
-      max-width: 720px;
-      margin: 0 auto;
-      line-height: 1.55;
+    /* About section specific styling (emulating your example) */
+    #about .section-content {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 6rem;
+      align-items: center;
+      text-align: left;
     }
 
-    /* Slim footer with logo */
+    .about-left {
+      padding-right: 2rem;
+    }
+
+    .about-left h2 {
+      font-size: clamp(2.8rem, 6vw, 4.8rem);
+      font-weight: 800;
+      line-height: 1.1;
+      margin-bottom: 1.8rem;
+      color: white;
+    }
+
+    .about-left p {
+      font-size: 1.25rem;
+      color: #d1d5db;
+      max-width: 520px;
+      line-height: 1.7;
+      margin-bottom: 2.5rem;
+    }
+
+    .about-badges {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.5rem;
+    }
+
+    .badge {
+      display: flex;
+      align-items: center;
+      gap: 0.8rem;
+      background: rgba(255,255,255,0.06);
+      padding: 0.8rem 1.4rem;
+      border-radius: 50px;
+      font-size: 0.95rem;
+      color: #d1d5db;
+      border: 1px solid rgba(255,255,255,0.12);
+    }
+
+    .badge i {
+      color: var(--accent);
+      font-size: 1.4rem;
+    }
+
+    .about-right img {
+      width: 100%;
+      max-width: 460px;
+      border-radius: 16px;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+      border: 8px solid rgba(59,130,246,0.15);
+      transform: translateZ(30px);
+    }
+
+    @media (max-width: 1024px) {
+      #about .section-content {
+        grid-template-columns: 1fr;
+        text-align: center;
+        gap: 4rem;
+      }
+      .about-left {
+        padding-right: 0;
+      }
+      .about-left h2 {
+        margin: 0 auto 1.5rem;
+      }
+      .about-left p {
+        margin: 0 auto 2rem;
+      }
+      .about-badges {
+        justify-content: center;
+      }
+      .about-right img {
+        max-width: 380px;
+      }
+    }
+
+    /* Footer */
     footer {
       background: rgba(15,23,42,0.92);
       backdrop-filter: blur(10px);
@@ -241,12 +333,6 @@
       text-align: center;
     }
 
-    .footer-brand {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
     .footer-brand .logo {
       width: 90px;
       height: 90px;
@@ -254,7 +340,6 @@
       border-radius: 50%;
       overflow: hidden;
       border: 3px solid var(--accent);
-      box-shadow: 0 0 16px rgba(59,130,246,0.3);
     }
 
     .footer-brand .logo img {
@@ -269,15 +354,9 @@
       margin-bottom: 0.4rem;
     }
 
-    .footer-column h3 {
-      color: white;
-      font-size: 1.05rem;
-      margin-bottom: 1rem;
-    }
-
+    .footer-column h3 { color: white; font-size: 1.05rem; margin-bottom: 1rem; }
     .footer-column ul { list-style: none; }
     .footer-column ul li { margin-bottom: 0.6rem; }
-
     .footer-column a { color: var(--text-light); text-decoration: none; }
     .footer-column a:hover { color: var(--accent); }
 
@@ -336,19 +415,16 @@
 </head>
 <body>
 
-  <!-- Unified navigation bar (logo + hamburger + icons) -->
+  <!-- Unified navigation bar -->
   <nav class="unified-nav">
-    <!-- Your logo at the top -->
     <div class="nav-logo">
       <img src="nobklogo.png" alt="Marc Wanjeru Logo">
     </div>
 
-    <!-- Hamburger -->
     <div id="hamburger" class="nav-top">
       <i class="fa-solid fa-bars"></i>
     </div>
 
-    <!-- Quick access icons -->
     <div class="nav-icons">
       <div class="bar-item active" data-section="home" title="Home"><i class="fa-solid fa-house"></i></div>
       <div class="bar-item" data-section="about" title="About"><i class="fa-solid fa-user"></i></div>
@@ -385,17 +461,85 @@
   </aside>
 
   <!-- Hero -->
-  <main class="hero">
-    <div class="hero-content">
+  <section id="home" class="parallax-section hero">
+    <div class="parallax-bg-layer"></div>
+    <div class="section-content">
       <h1>Welcome to My Portfolio</h1>
       <p class="subtitle">
         I'm Marc Wanjeru from Kampala.<br>
         Explore the navigation on the left to learn more about me.
       </p>
     </div>
-  </main>
+  </section>
 
-  <!-- Slim footer with logo -->
+  <!-- About Me section (emulating the reference style) -->
+  <section id="about" class="parallax-section">
+    <div class="parallax-bg-layer"></div>
+    <div class="section-content">
+      <div class="about-grid">
+        <div class="about-left">
+          <h2>I am a self-motivated, results-driven and highly skilled IT professional</h2>
+          <p>
+            with over 2 years experience in IT support, networking and IT service management. I have experience in managing enterprise-level environments, including Active Directory, Microsoft 365, endpoint security solutions, and cloud-based services. Recognized for problem-solving, strong analytical skills, and the ability to deliver innovative IT solutions that enhance productivity.
+          </p>
+
+          <div class="about-badges">
+            <div class="badge"><i class="fa-solid fa-certificate"></i> Microsoft Certified</div>
+            <div class="badge"><i class="fa-solid fa-shield-halved"></i> Security+ Aware</div>
+            <div class="badge"><i class="fa-solid fa-cloud"></i> Azure Fundamentals</div>
+            <div class="badge"><i class="fa-solid fa-users-gear"></i> ITIL Foundation</div>
+          </div>
+        </div>
+
+        <div class="about-right">
+          <img src="no bk prof pic.png" alt="Marc Wanjeru Professional Photo">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Other sections (placeholders) -->
+  <section id="education" class="parallax-section">
+    <div class="parallax-bg-layer"></div>
+    <div class="section-content">
+      <h2>Education</h2>
+      <p>Your education, certifications, and training...</p>
+    </div>
+  </section>
+
+  <section id="experience" class="parallax-section">
+    <div class="parallax-bg-layer"></div>
+    <div class="section-content">
+      <h2>Experience</h2>
+      <p>Professional journey and key roles...</p>
+    </div>
+  </section>
+
+  <section id="technologies" class="parallax-section">
+    <div class="parallax-bg-layer"></div>
+    <div class="section-content">
+      <h2>Technologies</h2>
+      <p>Tools, frameworks, and platforms I work with...</p>
+    </div>
+  </section>
+
+  <section id="services" class="parallax-section">
+    <div class="parallax-bg-layer"></div>
+    <div class="section-content">
+      <h2>Services</h2>
+      <p>What I can help you with...</p>
+    </div>
+  </section>
+
+  <section id="contact" class="parallax-section">
+    <div class="parallax-bg-layer"></div>
+    <div class="section-content">
+      <h2>Contact</h2>
+      <p>Let's talk about your next project.<br>marc@wanjeru.dev • +256 700 123 456</p>
+    </div>
+  </section>
+
+  <!-- Footer -->
   <footer>
     <div class="footer-grid">
       <div class="footer-brand">
@@ -409,7 +553,7 @@
       <div class="footer-column">
         <h3>Information</h3>
         <ul>
-          <li><a href="#">About Me</a></li>
+          <li><a href="#about">About Me</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Testimonials</a></li>
           <li><a href="#">Events</a></li>
@@ -433,7 +577,7 @@
       <div class="footer-column">
         <h3>Helpful Links</h3>
         <ul>
-          <li><a href="#">Services</a></li>
+          <li><a href="#services">Services</a></li>
           <li><a href="#">Support</a></li>
           <li><a href="#">Terms & Conditions</a></li>
           <li><a href="#">Privacy Policy</a></li>
@@ -443,7 +587,7 @@
       <div class="footer-column">
         <h3>Our Services</h3>
         <ul>
-          <li><a href="#">Web Development</a></li>
+          <li><a href="#services">Web Development</a></li>
           <li><a href="#">UI/UX Design</a></li>
           <li><a href="#">Consulting</a></li>
           <li><a href="#">Training</a></li>
@@ -477,7 +621,7 @@
       setTheme(current === 'dark' ? 'light' : 'dark');
     });
 
-    // Hamburger toggle
+    // Hamburger ↔ sidebar
     const hamburger = document.getElementById('hamburger');
     const sidebar = document.getElementById('slide-sidebar');
 
