--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
   <!-- Favicons -->
   <link rel="icon" href="nobklogo.png" type="image/png">
-  <link rel="icon" href="favicon.ico" sizes="any">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -76,16 +74,8 @@
       transition: all 0.3s;
     }
 
-    .nav-logo img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .nav-logo:hover {
-      transform: scale(1.1);
-      box-shadow: 0 0 20px rgba(59,130,246,0.5);
-    }
+    .nav-logo img { width: 100%; height: 100%; object-fit: cover; }
+    .nav-logo:hover { transform: scale(1.1); box-shadow: 0 0 20px rgba(59,130,246,0.5); }
 
     .nav-top {
       width: 48px;
@@ -100,17 +90,9 @@
       transition: all 0.25s;
     }
 
-    .nav-top:hover {
-      background: var(--accent);
-      color: white;
-      transform: scale(1.08);
-    }
+    .nav-top:hover { background: var(--accent); color: white; transform: scale(1.08); }
 
-    .nav-icons {
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-    }
+    .nav-icons { display: flex; flex-direction: column; gap: 12px; }
 
     .bar-item {
       width: 46px;
@@ -125,8 +107,7 @@
       transition: all 0.22s;
     }
 
-    .bar-item:hover,
-    .bar-item.active {
+    .bar-item:hover, .bar-item.active {
       background: var(--accent);
       color: white;
       transform: scale(1.07);
@@ -178,7 +159,7 @@
     }
 
     .profile h4 { font-size: 1.2rem; font-weight: 600; }
-    .profile span  { font-size: 0.94rem; color: var(--text-light); }
+    .profile span { font-size: 0.94rem; color: var(--text-light); }
 
     .sidebar-links a {
       display: flex;
@@ -192,8 +173,7 @@
       transition: background 0.2s;
     }
 
-    .sidebar-links a:hover,
-    .sidebar-links a.active { background: rgba(255,255,255,0.09); }
+    .sidebar-links a:hover, .sidebar-links a.active { background: rgba(255,255,255,0.09); }
 
     /* Parallax sections */
     .parallax-section {
@@ -227,20 +207,18 @@
       font-size: clamp(3rem, 8vw, 5.5rem);
       font-weight: 700;
       margin-bottom: 2rem;
-      transform: translateZ(50px);
     }
 
-    /* About section specific styling (emulating your example) */
+    /* About section – photo on right, text on left */
     #about .section-content {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 6rem;
       align-items: center;
-      text-align: left;
     }
 
     .about-left {
-      padding-right: 2rem;
+      text-align: left;
     }
 
     .about-left h2 {
@@ -254,8 +232,8 @@
     .about-left p {
       font-size: 1.25rem;
       color: #d1d5db;
-      max-width: 520px;
       line-height: 1.7;
+      max-width: 520px;
       margin-bottom: 2.5rem;
     }
 
@@ -273,14 +251,10 @@
       padding: 0.8rem 1.4rem;
       border-radius: 50px;
       font-size: 0.95rem;
-      color: #d1d5db;
       border: 1px solid rgba(255,255,255,0.12);
     }
 
-    .badge i {
-      color: var(--accent);
-      font-size: 1.4rem;
-    }
+    .badge i { color: var(--accent); font-size: 1.4rem; }
 
     .about-right img {
       width: 100%;
@@ -288,7 +262,6 @@
       border-radius: 16px;
       box-shadow: 0 20px 50px rgba(0,0,0,0.5);
       border: 8px solid rgba(59,130,246,0.15);
-      transform: translateZ(30px);
     }
 
     @media (max-width: 1024px) {
@@ -297,21 +270,9 @@
         text-align: center;
         gap: 4rem;
       }
-      .about-left {
-        padding-right: 0;
-      }
-      .about-left h2 {
-        margin: 0 auto 1.5rem;
-      }
-      .about-left p {
-        margin: 0 auto 2rem;
-      }
-      .about-badges {
-        justify-content: center;
-      }
-      .about-right img {
-        max-width: 380px;
-      }
+      .about-left h2, .about-left p { margin: 0 auto; }
+      .about-badges { justify-content: center; }
+      .about-right img { max-width: 380px; }
     }
 
     /* Footer */
@@ -348,11 +309,7 @@
       object-fit: cover;
     }
 
-    .footer-brand h2 {
-      font-size: 1.6rem;
-      color: white;
-      margin-bottom: 0.4rem;
-    }
+    .footer-brand h2 { font-size: 1.6rem; color: white; margin-bottom: 0.4rem; }
 
     .footer-column h3 { color: white; font-size: 1.05rem; margin-bottom: 1rem; }
     .footer-column ul { list-style: none; }
@@ -415,7 +372,7 @@
 </head>
 <body>
 
-  <!-- Unified navigation bar -->
+  <!-- Unified nav bar -->
   <nav class="unified-nav">
     <div class="nav-logo">
       <img src="nobklogo.png" alt="Marc Wanjeru Logo">
@@ -461,7 +418,7 @@
   </aside>
 
   <!-- Hero -->
-  <section id="home" class="parallax-section hero">
+  <section id="home" class="parallax-section">
     <div class="parallax-bg-layer"></div>
     <div class="section-content">
       <h1>Welcome to My Portfolio</h1>
@@ -472,22 +429,22 @@
     </div>
   </section>
 
-  <!-- About Me section (emulating the reference style) -->
+  <!-- About Me – text on left, photo on right -->
   <section id="about" class="parallax-section">
     <div class="parallax-bg-layer"></div>
     <div class="section-content">
       <div class="about-grid">
         <div class="about-left">
-          <h2>I am a self-motivated, results-driven and highly skilled IT professional</h2>
+          <h2>Marc Wanjeru is a self-motivated, results-driven and highly skilled IT professional</h2>
           <p>
             with over 2 years experience in IT support, networking and IT service management. I have experience in managing enterprise-level environments, including Active Directory, Microsoft 365, endpoint security solutions, and cloud-based services. Recognized for problem-solving, strong analytical skills, and the ability to deliver innovative IT solutions that enhance productivity.
           </p>
 
           <div class="about-badges">
-            <div class="badge"><i class="fa-solid fa-certificate"></i> Microsoft Certified</div>
-            <div class="badge"><i class="fa-solid fa-shield-halved"></i> Security+ Aware</div>
-            <div class="badge"><i class="fa-solid fa-cloud"></i> Azure Fundamentals</div>
-            <div class="badge"><i class="fa-solid fa-users-gear"></i> ITIL Foundation</div>
+            <div class="badge"><i class="fa-solid fa-certificate"></i> IT Support Specialist</div>
+            <div class="badge"><i class="fa-solid fa-network-wired"></i> Networking Professional</div>
+            <div class="badge"><i class="fa-solid fa-cloud"></i> Cloud Services Expert</div>
+            <div class="badge"><i class="fa-solid fa-shield-halved"></i> Endpoint Security</div>
           </div>
         </div>
 
@@ -498,12 +455,12 @@
     </div>
   </section>
 
-  <!-- Other sections (placeholders) -->
+  <!-- Placeholder sections (expand as needed) -->
   <section id="education" class="parallax-section">
     <div class="parallax-bg-layer"></div>
     <div class="section-content">
       <h2>Education</h2>
-      <p>Your education, certifications, and training...</p>
+      <p>Your education history...</p>
     </div>
   </section>
 
@@ -511,7 +468,7 @@
     <div class="parallax-bg-layer"></div>
     <div class="section-content">
       <h2>Experience</h2>
-      <p>Professional journey and key roles...</p>
+      <p>Professional journey...</p>
     </div>
   </section>
 
@@ -519,7 +476,7 @@
     <div class="parallax-bg-layer"></div>
     <div class="section-content">
       <h2>Technologies</h2>
-      <p>Tools, frameworks, and platforms I work with...</p>
+      <p>Tools and platforms...</p>
     </div>
   </section>
 
@@ -527,7 +484,7 @@
     <div class="parallax-bg-layer"></div>
     <div class="section-content">
       <h2>Services</h2>
-      <p>What I can help you with...</p>
+      <p>What I offer...</p>
     </div>
   </section>
 
@@ -535,7 +492,7 @@
     <div class="parallax-bg-layer"></div>
     <div class="section-content">
       <h2>Contact</h2>
-      <p>Let's talk about your next project.<br>marc@wanjeru.dev • +256 700 123 456</p>
+      <p>Let's connect.<br>marc@wanjeru.dev • +256 700 123 456</p>
     </div>
   </section>
 
