--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       content: "";
       position: fixed;
       inset: 0;
-      background: linear-gradient(to bottom, rgba(0,0,0,0.55), rgba(0,0,0,0.8));
+      background: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.85));
       z-index: -2;
     }
 
@@ -207,61 +207,76 @@
       font-size: clamp(3rem, 8vw, 5.5rem);
       font-weight: 700;
       margin-bottom: 2rem;
+      color: white;
     }
 
-    /* About section – photo on right, text on left */
+    /* About section – matching your reference style */
+    #about {
+      background: #000;
+      color: white;
+    }
+
+    #about .parallax-bg-layer {
+      background-image: url('wllpbk.jpg');
+      opacity: 0.35;
+      filter: grayscale(100%) brightness(0.6);
+    }
+
     #about .section-content {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 6rem;
       align-items: center;
+      padding: 0 5%;
     }
 
     .about-left {
       text-align: left;
     }
 
-    .about-left h2 {
-      font-size: clamp(2.8rem, 6vw, 4.8rem);
-      font-weight: 800;
-      line-height: 1.1;
-      margin-bottom: 1.8rem;
-      color: white;
+    .about-title {
+      font-size: clamp(2.5rem, 6vw, 4.5rem);
+      font-weight: 900;
+      line-height: 1;
+      margin-bottom: 1.5rem;
+      letter-spacing: -1px;
     }
 
-    .about-left p {
-      font-size: 1.25rem;
-      color: #d1d5db;
-      line-height: 1.7;
-      max-width: 520px;
+    .about-title span {
+      display: block;
+      font-size: 1.4rem;
+      font-weight: 400;
+      color: var(--accent);
+      margin-bottom: 0.5rem;
+      letter-spacing: normal;
+    }
+
+    .about-email {
+      font-size: 1.1rem;
+      color: #aaa;
       margin-bottom: 2.5rem;
+      font-weight: 300;
     }
 
-    .about-badges {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1.5rem;
+    .about-text {
+      font-size: 1.25rem;
+      line-height: 1.8;
+      color: #ccc;
+      max-width: 620px;
     }
-
-    .badge {
-      display: flex;
-      align-items: center;
-      gap: 0.8rem;
-      background: rgba(255,255,255,0.06);
-      padding: 0.8rem 1.4rem;
-      border-radius: 50px;
-      font-size: 0.95rem;
-      border: 1px solid rgba(255,255,255,0.12);
-    }
-
-    .badge i { color: var(--accent); font-size: 1.4rem; }
 
     .about-right img {
       width: 100%;
-      max-width: 460px;
-      border-radius: 16px;
-      box-shadow: 0 20px 50px rgba(0,0,0,0.5);
-      border: 8px solid rgba(59,130,246,0.15);
+      max-width: 480px;
+      border-radius: 8px;
+      box-shadow: 0 20px 60px rgba(0,0,0,0.7);
+      filter: grayscale(80%) contrast(1.1);
+      transition: all 0.4s;
+    }
+
+    .about-right img:hover {
+      filter: grayscale(0%) contrast(1.15);
+      transform: scale(1.03);
     }
 
     @media (max-width: 1024px) {
@@ -270,8 +285,7 @@
         text-align: center;
         gap: 4rem;
       }
-      .about-left h2, .about-left p { margin: 0 auto; }
-      .about-badges { justify-content: center; }
+      .about-left { text-align: center; }
       .about-right img { max-width: 380px; }
     }
 
@@ -429,23 +443,17 @@
     </div>
   </section>
 
-  <!-- About Me – text on left, photo on right -->
+  <!-- About section – matching your reference layout -->
   <section id="about" class="parallax-section">
-    <div class="parallax-bg-layer"></div>
+    <div class="parallax-bg-layer" style="background-image: url('wllpbk.jpg');"></div>
     <div class="section-content">
       <div class="about-grid">
         <div class="about-left">
-          <h2>Marc Wanjeru is a self-motivated, results-driven and highly skilled IT professional</h2>
+          <h2>ABOUT</h2>
+          <div class="about-email">marc@wanjeru.dev</div>
           <p>
-            with over 2 years experience in IT support, networking and IT service management. I have experience in managing enterprise-level environments, including Active Directory, Microsoft 365, endpoint security solutions, and cloud-based services. Recognized for problem-solving, strong analytical skills, and the ability to deliver innovative IT solutions that enhance productivity.
+            Self-motivated, results-driven and highly skilled IT professional with over 2 years experience in IT support, networking and IT service management. I have experience in managing enterprise-level environments, including Active Directory, Microsoft 365, endpoint security solutions, and cloud-based services. Recognized for problem-solving, strong analytical skills, and the ability to deliver innovative IT solutions that enhance productivity.
           </p>
-
-          <div class="about-badges">
-            <div class="badge"><i class="fa-solid fa-certificate"></i> IT Support Specialist</div>
-            <div class="badge"><i class="fa-solid fa-network-wired"></i> Networking Professional</div>
-            <div class="badge"><i class="fa-solid fa-cloud"></i> Cloud Services Expert</div>
-            <div class="badge"><i class="fa-solid fa-shield-halved"></i> Endpoint Security</div>
-          </div>
         </div>
 
         <div class="about-right">
@@ -455,12 +463,12 @@
     </div>
   </section>
 
-  <!-- Placeholder sections (expand as needed) -->
+  <!-- Other placeholder sections -->
   <section id="education" class="parallax-section">
     <div class="parallax-bg-layer"></div>
     <div class="section-content">
       <h2>Education</h2>
-      <p>Your education history...</p>
+      <p>Your education background...</p>
     </div>
   </section>
 
@@ -476,7 +484,7 @@
     <div class="parallax-bg-layer"></div>
     <div class="section-content">
       <h2>Technologies</h2>
-      <p>Tools and platforms...</p>
+      <p>Tools & platforms...</p>
     </div>
   </section>
 
