--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
   <style>
     :root {
-      --bg: #0b0f1a;
+      --bg: #000000;
       --glass: rgba(25, 30, 45, 0.82);
       --accent: #3b82f6;
-      --text: #e2e8f0;
-      --text-light: #94a3b8;
+      --text: #ffffff;
+      --text-light: #cccccc;
       --border: rgba(255,255,255,0.08);
     }
 
@@ -35,14 +35,6 @@
       color: var(--text);
       line-height: 1.6;
       overflow-x: hidden;
-    }
-
-    body::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.85));
-      z-index: -2;
     }
 
     /* Unified left nav bar with logo */
@@ -201,16 +193,28 @@
       z-index: 2;
       max-width: 1100px;
       width: 100%;
+      padding: 0 5%;
     }
 
     .section-content h2 {
-      font-size: clamp(3rem, 8vw, 5.5rem);
-      font-weight: 700;
-      margin-bottom: 2rem;
+      font-size: clamp(3.5rem, 8vw, 6rem);
+      font-weight: 900;
+      margin-bottom: 1.5rem;
       color: white;
+      letter-spacing: -1px;
+      line-height: 1;
     }
 
-    /* About section – matching your reference style */
+    .section-content h2 span {
+      display: block;
+      font-size: 0.4em;
+      font-weight: 400;
+      color: var(--accent);
+      margin-bottom: 0.8rem;
+      letter-spacing: normal;
+    }
+
+    /* About section – matching your new reference */
     #about {
       background: #000;
       color: white;
@@ -218,8 +222,8 @@
 
     #about .parallax-bg-layer {
       background-image: url('wllpbk.jpg');
-      opacity: 0.35;
-      filter: grayscale(100%) brightness(0.6);
+      opacity: 0.4;
+      filter: brightness(0.6) contrast(1.1);
     }
 
     #about .section-content {
@@ -227,7 +231,6 @@
       grid-template-columns: 1fr 1fr;
       gap: 6rem;
       align-items: center;
-      padding: 0 5%;
     }
 
     .about-left {
@@ -235,48 +238,39 @@
     }
 
     .about-title {
-      font-size: clamp(2.5rem, 6vw, 4.5rem);
+      font-size: clamp(3rem, 7vw, 5.5rem);
       font-weight: 900;
       line-height: 1;
       margin-bottom: 1.5rem;
-      letter-spacing: -1px;
-    }
-
-    .about-title span {
-      display: block;
-      font-size: 1.4rem;
-      font-weight: 400;
-      color: var(--accent);
-      margin-bottom: 0.5rem;
-      letter-spacing: normal;
+      letter-spacing: -2px;
     }
 
     .about-email {
-      font-size: 1.1rem;
-      color: #aaa;
+      font-size: 1.3rem;
+      color: #aaaaaa;
       margin-bottom: 2.5rem;
       font-weight: 300;
     }
 
     .about-text {
       font-size: 1.25rem;
-      line-height: 1.8;
-      color: #ccc;
+      line-height: 1.9;
+      color: #cccccc;
       max-width: 620px;
     }
 
     .about-right img {
       width: 100%;
-      max-width: 480px;
+      max-width: 520px;
       border-radius: 8px;
-      box-shadow: 0 20px 60px rgba(0,0,0,0.7);
-      filter: grayscale(80%) contrast(1.1);
-      transition: all 0.4s;
+      box-shadow: 0 30px 80px rgba(0,0,0,0.8);
+      filter: grayscale(60%) contrast(1.15);
+      transition: all 0.5s ease;
     }
 
     .about-right img:hover {
-      filter: grayscale(0%) contrast(1.15);
-      transform: scale(1.03);
+      filter: grayscale(0%) contrast(1.2);
+      transform: scale(1.02);
     }
 
     @media (max-width: 1024px) {
@@ -286,10 +280,10 @@
         gap: 4rem;
       }
       .about-left { text-align: center; }
-      .about-right img { max-width: 380px; }
+      .about-right img { max-width: 420px; }
     }
 
-    /* Footer */
+    /* Footer (kept slim) */
     footer {
       background: rgba(15,23,42,0.92);
       backdrop-filter: blur(10px);
@@ -443,7 +437,7 @@
     </div>
   </section>
 
-  <!-- About section – matching your reference layout -->
+  <!-- About section – matching your latest reference -->
   <section id="about" class="parallax-section">
     <div class="parallax-bg-layer" style="background-image: url('wllpbk.jpg');"></div>
     <div class="section-content">
